--- a/style.css
+++ b/style.css
@@ -1,21 +1,5 @@
-body {
-    font-family: Arial, sans-serif;
-}
-
-.sidebar {
-    width: 250px;
-}
-
-.sidebar .nav-link {
-    padding: 10px 20px;
-}
-
-.sidebar .nav-link.active {
-    background-color: #007bff;
-    color: #fff !important;
-}
-
-.card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
+.nav-link.active {
+    background-color: #7db7f1; /* Color azul de Bootstrap */
+    color: rgb(255, 255, 255) !important;
+            
 }
