--- a/public/templates/AgregarGasto.html
+++ b/public/templates/AgregarGasto.html
@@ -24,7 +24,7 @@
         <div class="modal-content rounded-5 p-4">
         
             <div class="modal-header">
-                <h5 class="modal-title w-100 fs-3">Agregar gasto</h5>
+                <h5 class="modal-title w-100 fs-3 text-center">Agregar gasto</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
